--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Gideon+Roman&family=Playfair+Display&family=Roboto+Condensed&family=Yeseva+One&display=swap"
         rel="stylesheet">
+
     <!-- --------------css-link-------------- -->
+
     <link rel="stylesheet" href="style.css">
 
+    <!-- ------added favicon --------->
+    <link rel="shortcut icon" href="images/pictures/download (3).jpg" type="image/x-icon">
     <title>our-first assignment-2022</title>
 </head>
 
 <body>
     <!--------------------first-section-area start----------------- -->
 
-    <section>
+    <section class="first">
         <div class="first-section">
             <div class="half-width">
                 <div id="boreder-slice">
@@ -118,9 +122,37 @@
                 <img src="images/pictures/project.png" alt="">
             </div>
         </div>
-
-
     </section>
+    <!------- community section end---------------->
+
+
+    <!-- ----------success-area start----------->
+    <section class="success-area">
+        <h1><span class="partial-color">Our Success</span>____ History</h1>
+        <div class="success">
+
+            <div id="forback-ground" class="half">
+                <h1>We have the</h1>
+                <h1>Key to success</h1>
+                <p>The financial rewardeds that came from being successfull in buissness are of course important to many
+                    enterprenuers</p>
+                <input class="input" type="text" placeholder="Enter your mail">
+                <a target="-blank" class="button-color" href="">Click Here to know more service</a>
+
+            </div>
+            <div class="half">
+                <img src="images/pictures/keysuccess.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- ----------success-area end----------->
+
+    <!------------ footer section-------------->
+    <footer class="footer-section">
+        <h1> <i>Mission : -</i><span class="partial-color"> 2022</span></h1>
+        <p>Hard work, Perseverance, and Determination for 2022</p>
+    </footer>
+    <!-------------   end footer --------------->
 </body>
 
 </html>
