--- a/index.html
+++ b/index.html
@@ -53,26 +53,20 @@
             <div id="mission" class="mission-item">
                 <img src="images/illustrators/illustrator-1.png" alt="">
                 <h3>Mission</h3>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit</p>
+                <p>This is year, I have a mission to learn programming language.I will learn more programming language
+                    from this year. I want to be a web-developer.This is my mission in this year. </p>
             </div>
             <div id="vission" class="mission-item">
                 <img src="images/illustrators/illustrator-2.png" alt="">
                 <h3>Vission</h3>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit</p>
+                <p>This is year, I have a vission that i will be became a web-developer. And i will be able to do many
+                    work in this year and wanted to learn more and more programming language. </p>
             </div>
             <div id="goals" class="mission-item">
                 <img src="images/illustrators/illustrator-3.png" alt="">
                 <h3>Goals</h3>
-                <p>Amet minim mollit non deserunt
-                    ullamco est sit aliqua dolor do amet
-                    sint. Velit officia consequat duis enim
-                    velit mollit</p>
+                <p>In this year i have a goal that is only to be became a web-developer.I want to learn more and more
+                    programming language.Wish me to full fill my dream.</p>
             </div>
         </div>
     </section>
